# lfit

./: .gitignore  AUTHORS  BrightSpot.cc  BrightSpot.h  Disc.cc  Disc.h  Donor.cc  Donor.h  Makefile  Makefile.am  Makefile.in  README  README.md  README.rst  WhiteDwarf.cc  WhiteDwarf.h  aclocal.m4  cholesky.cc  cholesky.h  config.h  config.h.in  config.status  configure  configure.ac  discEclipse.cc  finddeg.cc  geometry.h  lfit.cc  lfit.csh  lfit.h  lfit_debug.csh  lfit_errors.cc  lfit_fake.cc  lfit_io.cc  lfit_levmarq.cc  lfit_mask.cc  lfit_mcmc.cc  lfit_params.h  lfit_plot.cc  lfit_rebin.cc  (+8 more)
autom4te.cache/: output.0  output.1  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
include/: Makefile  Makefile.am  Makefile.in  WhiteDwarf.h  cholesky.h  geometry.h  lfit.h  lfit_params.h
params/: bivar.f90  colourevo  colourevo.cc  convert  convert.cc  fitparams.py  incl  incl.cc  incl.f90  limbdark.py  nauenberg  nauenberg.f  newParams  newParams.cc  newParams_safe  params  params.cc  stellar_calcs  stellar_calcs.f90  trm_spline.cc  wd_params  wd_params.cc  wdparams.py
params/Bergeron/: bergeronNew.xls
python/: lfit.pyx  peeking_BS_test.py  setup.py  test.cc  test.py  testCV.py
python/include/: BrightSpot.h  Disc.h  Donor.h  Point.h
python/scripts/: calcPhysicalParams.py
python/src/: BrightSpot.cc  Disc.cc  Donor.cc  Point.cc  (+1 more)
scripts/: burnInLog.txt  compareCols.py  ftest.py  parseBootstrap.py  plotBurn.py  plotChains.py  plotMCMCPars.py  plotNSteps.py  plotParams.py  plotScale.py  scatter_hist.py  thumbPlot.py
src/: BrightSpot.cc  Makefile  Makefile.am  Makefile.in  discEclipse.cc  finddeg.cc  lfit.cc  lfit_bootstrap.cc  lfit_errors.cc  lfit_mcmc.cc  lfit_rebin.cc
